# fasernu-project

./: .gitignore
analysis/fasernu_jets/: CMakeLists.txt  README.md  init.sh
analysis/fasernu_jets/FaserNu_Jets/: CustomJetAlgorithm.h  GenieAna.h  GenieEvent.h  Helpers.h  RunMgr.h
analysis/fasernu_jets/app/: AnaExample_Event.cxx
analysis/fasernu_jets/src/: CustomJetAlgorithm.cxx  GenieAna.cxx  GenieEvent.cxx  Helpers.cxx  RunMgr.cxx
analysis/jet_reconstruction/: JetC.C
analysis/vertices/: CMakeLists.txt  init.sh
analysis/vertices/include/algorithm/: VertexFinder.hpp  VertexKalmanFilter.hpp
analysis/vertices/include/data/: tracks.hpp
analysis/vertices/include/simulation/: VertexSimulator.hpp
analysis/vertices/include/visualization/: TrackClusterVisualizer.hpp  TrackIntersectionVisualizer.hpp  TrackLengthVisualizer.hpp
analysis/vertices/src/: main.cxx
analysis/vertices/src/algorithm/: VertexFinder.cxx  VertexKalmanFilter.cxx
analysis/vertices/src/data/: tracks.cxx
analysis/vertices/src/simulation/: VertexSimulator.cxx
analysis/vertices/src/visualization/: TrackIntersectionVisualizer.cxx  TrackLengthVisualizer.cxx
log/: shorthands.typ
log/daily_journal/: all.typ
log/daily_journal/december/: 01.typ  02.typ  05.typ  08.typ  09.typ
log/daily_journal/february/: 10.typ  13.typ
log/daily_journal/january/: 15.typ
log/daily_journal/november/: 24.typ  25.typ  28.typ
log/presentation/visualizations/: hello.py  pyproject.toml
log/reading/: questions_to_ask_enrique.typ  summary.typ
log/templates/: journal.typ  physics_homework.typ
